syntax = "proto3";

package com.metao.book;
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.metao.book.order";
option java_outer_classname = "KafkaProto";

message OrderPaymentEvent {
  string id = 1;
  // Created updated date.
  google.protobuf.Timestamp create_time = 8;
  // Last updated date.
  optional google.protobuf.Timestamp update_time = 9;
  string customerId = 10;

  string productId = 2;
  string accountId = 3;
  Status status = 4;
  double quantity = 5;
  double price = 6;
  string currency = 7;
  enum Status {
    NEW = 0;
    SUBMITTED = 1;
    REJECTED = 2;
    CONFIRMED = 3;
    ROLLED_BACK = 4;
  };

  message UUID {
    // typedef string
  }
}

