syntax = "proto3";

package com.metao.book;
import "google/protobuf/timestamp.proto";
import "Category.proto";

option java_multiple_files = true;
option java_package = "com.metao.book.shared";

message ProductUpdatedEvent {
  string asin = 1;
  // Created updated date.
  google.protobuf.Timestamp updated_time = 2;
  optional string title = 3;
  optional string description = 4;
  double price = 5;
  double volume = 6;
  string currency = 7;
  string image_url = 8;

  // Category of the product
  repeated Category categories = 9;
}

